--- a/Connected.Authorization.Api/src/Connected.Authorization.Data/Connected.Authorization.Data.csproj
+++ b/Connected.Authorization.Api/src/Connected.Authorization.Data/Connected.Authorization.Data.csproj
@@ -7,4 +7,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Connected.Authorization.Domain\Connected.Authorization.Domain.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.EntityFrameworkCore">
+      <HintPath>..\..\..\..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.entityframeworkcore\2.1.1\lib\netstandard2.0\Microsoft.EntityFrameworkCore.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
