Finishing Connected.Account.Api

--- a/Connected.Accounts.Api/src/Connected.Accounts.Business/Connected.Accounts.Business.csproj
+++ b/Connected.Accounts.Api/src/Connected.Accounts.Business/Connected.Accounts.Business.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Connected.Accounts.Domain\Connected.Accounts.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\..\..\..\..\..\..\..\.nuget\packages\automapper\8.0.0\lib\netstandard2.0\AutoMapper.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
