--- a/Connected.Accounts.Api/src/Connected.Accounts.WebHost/Connected.Accounts.WebHost.csproj
+++ b/Connected.Accounts.Api/src/Connected.Accounts.WebHost/Connected.Accounts.WebHost.csproj
@@ -9,12 +9,14 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Connected.Accounts.Data\Connected.Accounts.Data.csproj" />
+    <ProjectReference Include="..\Connected.Accounts.Business\Connected.Accounts.Business.csproj" />
+    <ProjectReference Include="..\Connected.Accounts.Data\Connected.Accounts.Data.csproj" />
   </ItemGroup>
 
 </Project>
