--- a/Connected.Accounts.Api/src/Connected.Accounts.WebHost/appstettings.json
+++ b/Connected.Accounts.Api/src/Connected.Accounts.WebHost/appstettings.json
@@ -1,5 +1,5 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Connected.GroundZero;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Connected-Accounts.Service;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
 }
